--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,20 +6,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_map"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/map"
             android:title="Map" />
         <item
             android:id="@+id/nav_favorites"
             android:icon="@drawable/ic_action_name"
             android:title="Favorites" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_featured"
+            android:icon="@drawable/featured"
+            android:title="Featured" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_featuredS"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Featured-scroll" />
     </group>
 
     <item android:title="Communicate">
