--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_map"
             android:icon="@drawable/map"
-            android:title="Map" />
+            android:title="TeaMap" />
         <item
             android:id="@+id/nav_favorites"
             android:icon="@drawable/ic_action_name"
