--- a/app/src/main/res/layout/fragment_feature2.xml
+++ b/app/src/main/res/layout/fragment_feature2.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:paddingBottom="300"
+        android:paddingBottom="300dp"
         android:src = "@drawable/chatime"
         />
     <TextView
